--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+bluefish (1.0.2-0.1) unstable; urgency=low
+
+  * NMU 
+  * New upstream version (closes: #317239)
+  * Upstraam fixes:
+  	- Translations updated (closes: #308849, #313674)
+  	- Browse Project crash (closes: #295536)
+
+ -- Leo Costela <costela@debian.org>  Wed, 03 Aug 2005 17:06:46 -0300
+
 bluefish (1.0-1) unstable; urgency=medium
 
   * Acknowledge NMU, thanks Leo; closes: #291222.
