--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: bluefish\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-09 05:36-0700\n"
-"PO-Revision-Date: 2005-01-19 11:34+0800\n"
+"PO-Revision-Date: 2005-08-10 17:40+0800\n"
 "Last-Translator: OLS3 <ols3@lxer.idv.tw>\n"
 "Language-Team: zh_TW <i18n-translation@b2d.org.tw>\n"
 "MIME-Version: 1.0\n"
@@ -32,7 +32,6 @@ msgstr ""
 "這個版本的 Bluefish 使用以下編譯選項:\n"
 
 #: ../src/about.c:57
-#, fuzzy
 msgid ""
 "Project leader:\n"
 "  Olivier Sessink <olivier@bluefish.openoffice.nl>\n"
@@ -266,6 +265,9 @@ msgid ""
 "\n"
 "Resulting in the detection of:\n"
 msgstr ""
+"\n"
+"\n"
+"偵測結果:\n"
 
 #: ../src/about.c:220 ../src/fref.c:1448 ../src/fref.c:1732 ../src/fref.c:1819
 #: ../src/fref.c:1854 ../src/fref.c:2331
@@ -318,7 +320,7 @@ msgstr "拼錯的單字(_M):"
 
 #: ../src/bfspell.c:401
 msgid "Change _to:"
-msgstr "變更為(_T):"
+msgstr "更改為(_T):"
 
 #: ../src/bfspell.c:404
 msgid "I_gnore"
@@ -434,7 +436,6 @@ msgid "Bluefish tip:"
 msgstr "Bluefish 技巧:"
 
 #: ../src/bluefish.c:249
-#, fuzzy
 msgid ""
 "This message is shown if you do not have any items in the Quickbar.\n"
 "\n"
@@ -446,7 +447,7 @@ msgstr ""
 
 #: ../src/bluefish.c:252
 msgid "_Don't show this dialog again."
-msgstr ""
+msgstr "不要再顯示這個對話框.(_D)"
 
 #: ../src/bookmark.c:366 ../src/html.c:617 ../src/html.c:837
 #: ../src/html.c:1432 ../src/html.c:1893 ../src/html_form.c:231
@@ -461,7 +462,7 @@ msgstr "描述(_D):"
 
 #: ../src/bookmark.c:373
 msgid "Temporary"
-msgstr "暫時"
+msgstr "暫存"
 
 #: ../src/bookmark.c:473
 #, c-format
@@ -525,7 +526,7 @@ msgstr "無法在未命名的檔案中新增書籤."
 
 #: ../src/bookmark.c:1297
 msgid "You already have a bookmark here!"
-msgstr "您目前在這裡頭已經有書籤了!"
+msgstr "您目前已經有一個書籤了!"
 
 #: ../src/bookmark.c:1370
 msgid "Delete all bookmarks."
@@ -790,7 +791,7 @@ msgstr "不儲存(_N)"
 
 #: ../src/document.c:2682 ../src/document.c:3776 ../src/project.c:371
 msgid "If you don't save your changes they will be lost."
-msgstr "若您不儲存, 則所有的更改將會消失."
+msgstr "若您不儲存, 則所有的變動將會消失."
 
 #: ../src/document.c:2962
 msgid "No filename"
@@ -928,7 +929,7 @@ msgstr "選擇每個檔案(_F)"
 
 #: ../src/document.c:3775
 msgid "Multiple open files have been changed."
-msgstr "多重開啟的檔案已更改."
+msgstr "多重開啟的檔案已變動."
 
 #: ../src/document.c:4023
 #, c-format
@@ -1125,11 +1126,11 @@ msgstr "書籤"
 
 #: ../src/gui.c:594
 msgid "QuickStart..."
-msgstr "快速啟動..."
+msgstr "快速啟用..."
 
 #: ../src/gui.c:595
 msgid "Body..."
-msgstr "本體..."
+msgstr "HTML body 設定..."
 
 #: ../src/gui.c:596
 msgid "Bold"
@@ -1153,11 +1154,11 @@ msgstr "換列清除"
 
 #: ../src/gui.c:601
 msgid "Non-breaking space"
-msgstr "不換列空白"
+msgstr "空白"
 
 #: ../src/gui.c:603
 msgid "Anchor..."
-msgstr "錨..."
+msgstr "錨(連結設定)..."
 
 #: ../src/gui.c:604
 msgid "Rule..."
@@ -1176,7 +1177,6 @@ msgid "Comment"
 msgstr "註解"
 
 #: ../src/gui.c:608
-#, fuzzy
 msgid "E-mail..."
 msgstr "電子郵件..."
 
@@ -1198,7 +1198,7 @@ msgstr "字型大小 -1"
 
 #: ../src/gui.c:614
 msgid "Preformatted Text"
-msgstr "預先已格式化文字"
+msgstr "預先格式化文字"
 
 #: ../src/gui.c:615
 msgid "Subscript"
@@ -1254,7 +1254,7 @@ msgstr "表格列..."
 
 #: ../src/gui.c:630
 msgid "Table Header..."
-msgstr "表頭..."
+msgstr "表格表頭..."
 
 #: ../src/gui.c:631
 msgid "Table Data..."
@@ -1270,7 +1270,7 @@ msgstr "表格列"
 
 #: ../src/gui.c:635 ../src/html_table.c:324
 msgid "Table Header"
-msgstr "表頭"
+msgstr "表格表頭"
 
 #: ../src/gui.c:636 ../src/html_table.c:322
 msgid "Table Data"
@@ -1338,7 +1338,7 @@ msgstr "輸入檢示盒..."
 
 #: ../src/gui.c:654
 msgid "Select..."
-msgstr "選擇..."
+msgstr "下拉選單..."
 
 #: ../src/gui.c:655
 msgid "Option..."
@@ -1354,27 +1354,27 @@ msgstr "按鈕..."
 
 #: ../src/gui.c:658
 msgid "Quick List..."
-msgstr "快速列表..."
+msgstr "快速清單..."
 
 #: ../src/gui.c:659
 msgid "Unordered List"
-msgstr "無序列表"
+msgstr "無序清單"
 
 #: ../src/gui.c:660
 msgid "Ordered List"
-msgstr "有序列表"
+msgstr "有序清單"
 
 #: ../src/gui.c:661
 msgid "List Item"
-msgstr "列表項目"
+msgstr "清單項目"
 
 #: ../src/gui.c:662
 msgid "Definition List"
-msgstr "定義列表"
+msgstr "定義清單"
 
 #: ../src/gui.c:663
 msgid "Definition Term"
-msgstr "名辭定義"
+msgstr "定義項目"
 
 #: ../src/gui.c:664 ../src/gui.c:673
 msgid "Definition"
@@ -1406,11 +1406,11 @@ msgstr "插入圖像..."
 
 #: ../src/gui.c:671
 msgid "Insert thumbnail..."
-msgstr "插入略圖..."
+msgstr "插入縮小圖..."
 
 #: ../src/gui.c:672
 msgid "Multi thumbnail..."
-msgstr "多重略圖..."
+msgstr "多重縮小圖..."
 
 #: ../src/gui.c:674
 msgid "Code"
@@ -1490,7 +1490,7 @@ msgstr " 表單 "
 
 #: ../src/gui.c:1049
 msgid " List "
-msgstr " 列表 "
+msgstr " 清單 "
 
 #: ../src/gui.c:1054
 msgid " CSS "
@@ -1582,7 +1582,7 @@ msgstr "由選擇中(_S)"
 
 #: ../src/gui.c:1583
 msgid "Keep _dialog"
-msgstr "保持對話盒(_D)"
+msgstr "對話框不消失(_D)"
 
 #: ../src/gui.c:1649
 msgid "starting bluefish"
@@ -1615,7 +1615,7 @@ msgstr "研究第二個樣式 '%s': %s"
 
 #: ../src/html2.c:557
 msgid "Cascading StyleSheet dialog"
-msgstr "串列樣式表對話盒"
+msgstr "串列樣式表對話框"
 
 #: ../src/html2.c:577
 msgid "_Selector:"
@@ -1721,7 +1721,7 @@ msgstr "  Unix 日期字串(_S) (%s"
 #: ../src/html.c:447
 #, c-format
 msgid "  ISO-8601 Ti_me (%s)"
-msgstr ""
+msgstr "  ISO-8601 時間 (_m) (%s)"
 
 #: ../src/html.c:589
 msgid "Quick Anchor"
@@ -1945,34 +1945,32 @@ msgid "Custom"
 msgstr "自定"
 
 #: ../src/html.c:1652
-#, fuzzy
 msgid "E-mail"
 msgstr "電子郵件"
 
 #: ../src/html.c:1660
 msgid "_Mail to:"
-msgstr ""
+msgstr "寄給(_M):"
 
 #: ../src/html.c:1664
-#, fuzzy
 msgid "_Copy to:"
-msgstr "複製"
+msgstr "複本給(_C):"
 
 #: ../src/html.c:1668
 msgid "Blin_d copy to:"
-msgstr ""
+msgstr "密件複本給(_D):"
 
 #: ../src/html.c:1672
 msgid "with _Subject:"
-msgstr ""
+msgstr "主旨(_S):"
 
 #: ../src/html.c:1676
 msgid "with _Body:"
-msgstr ""
+msgstr "信件內容(_B):"
 
 #: ../src/html.c:1720
 msgid "Quick List"
-msgstr "快速列表"
+msgstr "快速清單"
 
 #: ../src/html.c:1725 ../src/html.c:1807 ../src/html_form.c:236
 msgid "_Rows:"
@@ -2044,7 +2042,6 @@ msgid "Link"
 msgstr "連結"
 
 #: ../src/html.c:2114
-#, fuzzy
 msgid "HREF_LANG:"
 msgstr "_HREF:"
 
@@ -2194,7 +2191,7 @@ msgstr "不自動換列(_P):"
 
 #: ../src/image.c:262
 msgid "Insert thumbnail"
-msgstr "插入略圖"
+msgstr "插入縮小圖"
 
 #: ../src/image.c:264
 msgid "Insert image"
@@ -2234,7 +2231,7 @@ msgstr "邊框(_R):"
 
 #: ../src/image.c:416 ../src/image.c:425
 msgid "Select files for thumbnail creation"
-msgstr "選擇建立略圖的檔案"
+msgstr "選擇建立縮小圖的檔案"
 
 #: ../src/image.c:543
 msgid "Scaling (%)"
@@ -2250,7 +2247,7 @@ msgstr "高度"
 
 #: ../src/image.c:567
 msgid "Multi thumbnail"
-msgstr "多重略圖"
+msgstr "多重縮小圖"
 
 #: ../src/image.c:573
 msgid "By scaling"
@@ -2275,9 +2272,9 @@ msgid ""
 "%x: thumbnail width  %y: thumbnail height\n"
 "%b: original size (bytes)"
 msgstr ""
-"%r: 原檔名  %t: 略圖檔名\n"
+"%r: 原檔名  %t: 縮小圖檔名\n"
 "%w: 原寬度  %h: 原高度\n"
-"%x: 略圖寬度  %y: 略圖高度\n"
+"%x: 縮小圖寬度  %y: 縮小圖高度\n"
 "%b: 原大小(字元組)"
 
 #: ../src/menu.c:315
@@ -2609,7 +2606,6 @@ msgid "/Tags/Special/Accent/Uppercase/J-Z/O circumflex Ô"
 msgstr "/標記(T)/特殊(S)/音標(A)/大寫(U)/J-Z/??"
 
 #: ../src/menu.c:430
-#, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/J-Z/OE ligature Œ"
 msgstr "/標記(T)/特殊(S)/音標(A)/大寫(U)/A-I/OE"
 
@@ -2734,7 +2730,6 @@ msgid "/Tags/Special/Accent/Lowercase/J-Z/o acute ó"
 msgstr "/標記(T)/特殊(S)/音標(A)/小寫(L)/J-Z/??"
 
 #: ../src/menu.c:463
-#, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/oe ligature œ"
 msgstr "/標記(T)/特殊(S)/音標(A)/小寫(L)/A-I/??"
 
@@ -3108,35 +3103,35 @@ msgstr "/標記(T)/表格(T)/表格標題(_C)"
 
 #: ../src/menu.c:568
 msgid "/Tags/_List"
-msgstr "/標記(T)/列表(_L)"
+msgstr "/標記(T)/清單(_L)"
 
 #: ../src/menu.c:570
 msgid "/Tags/List/Unordered _List"
-msgstr "/標記(T)/列表(L)/無序列表(_L)"
+msgstr "/標記(T)/清單(L)/無序清單(_L)"
 
 #: ../src/menu.c:571
 msgid "/Tags/List/_Ordered List"
-msgstr "/標記(T)/列表(L)/有序列表(_O)"
+msgstr "/標記(T)/清單(L)/有序清單(_O)"
 
 #: ../src/menu.c:572
 msgid "/Tags/List/List Ite_m"
-msgstr "/標記(T)/列表(L)/列表項目(_M)"
+msgstr "/標記(T)/清單(L)/清單項目(_M)"
 
 #: ../src/menu.c:573
 msgid "/Tags/List/De_finition List"
-msgstr "/標記(T)/列表(L)/定義列表(_F)"
+msgstr "/標記(T)/清單(L)/定義清單(_F)"
 
 #: ../src/menu.c:574
 msgid "/Tags/List/Definition _Term"
-msgstr "/標記(T)/列表(L)/名辭定義(_T)"
+msgstr "/標記(T)/清單(L)/定義項目(_T)"
 
 #: ../src/menu.c:575
 msgid "/Tags/List/_Definition"
-msgstr "/標記(T)/列表(L)/定義(_D)"
+msgstr "/標記(T)/清單(L)/定義(_D)"
 
 #: ../src/menu.c:576
 msgid "/Tags/List/Men_u"
-msgstr "/標記(T)/列表(L)/選單(_U)"
+msgstr "/標記(T)/清單(L)/選單(_U)"
 
 #: ../src/menu.c:577
 msgid "/Tags/Fo_rm"
@@ -3207,9 +3202,8 @@ msgid "/Dialogs/General/_Quickstart..."
 msgstr "/對話(O)/一般(G)/快速啟動(_Q)..."
 
 #: ../src/menu.c:602
-#, fuzzy
 msgid "/Dialogs/General/_Link Header..."
-msgstr "/對話(O)/一般(G)/_Meta..."
+msgstr "/對話(O)/一般(G)/連結表頭(_L)..."
 
 #: ../src/menu.c:603
 msgid "/Dialogs/General/_Body..."
@@ -3237,7 +3231,7 @@ msgstr "/對話(O)/一般(G)/基本字型(_O).."
 
 #: ../src/menu.c:609
 msgid "/Dialogs/General/Quick_list..."
-msgstr "/對話(O)/一般(G)/快速列表(_L)..."
+msgstr "/對話(O)/一般(G)/快速清單(_L)..."
 
 #: ../src/menu.c:610
 msgid "/Dialogs/General/_Meta..."
@@ -3261,7 +3255,7 @@ msgstr "/對話(O)/一般(G)/插入圖像(_I)..."
 
 #: ../src/menu.c:615
 msgid "/Dialogs/General/Insert T_humbnail..."
-msgstr "/對話(O)/一般(G)/插入略圖(_H)..."
+msgstr "/對話(O)/一般(G)/插入縮小圖(_H)..."
 
 #: ../src/menu.c:616
 msgid "/Dialogs/_Table"
@@ -3449,7 +3443,7 @@ msgstr "/衝(G)/最後一個文件(_A)"
 
 #: ../src/menu.c:705
 msgid "/Go/Goto _Line"
-msgstr "/衝(G)/跳到列(_L)"
+msgstr "/衝(G)/跳列(_L)"
 
 #: ../src/menu.c:706
 msgid "/Go/Goto _Selection"
@@ -3626,7 +3620,7 @@ msgstr "新增新的選單項次"
 
 #: ../src/menu.c:2385
 msgid "Apply Changes"
-msgstr "套用更改"
+msgstr "套用變動"
 
 #: ../src/menu.c:2387
 msgid "Delete Menu Entry"
@@ -3638,7 +3632,7 @@ msgstr "不儲存並關閉"
 
 #: ../src/menu.c:2392
 msgid "Save Changes and Exit"
-msgstr "儲存更改並離開"
+msgstr "儲存變動後離開"
 
 #: ../src/menu.c:2402
 msgid "_Menu Path:"
@@ -3658,7 +3652,7 @@ msgstr "變數"
 
 #: ../src/menu.c:2470
 msgid "Custom Dialo_g"
-msgstr "自定對話盒(_G)"
+msgstr "自定對話框(_G)"
 
 #: ../src/menu.c:2472
 msgid "Custom Replace"
@@ -4106,7 +4100,7 @@ msgstr "一般"
 
 #: ../src/preferences.c:2102
 msgid "Make HTML dialogs transient"
-msgstr "產生臨時 HTML 對話盒"
+msgstr "產生臨時 HTML 對話框"
 
 #: ../src/preferences.c:2104
 msgid "External browsers in submenu"
@@ -4142,15 +4136,15 @@ msgstr "圖像"
 
 #: ../src/preferences.c:2117
 msgid "Thumbnails"
-msgstr "略圖"
+msgstr "縮小圖"
 
 #: ../src/preferences.c:2121
 msgid "Thumbnail suffix"
-msgstr "略圖副檔名"
+msgstr "縮小圖副檔名"
 
 #: ../src/preferences.c:2125
 msgid "Thumbnail filetype"
-msgstr "略圖檔案類型"
+msgstr "縮小圖檔案類型"
 
 #: ../src/preferences.c:2130 ../src/preferences.c:2132
 msgid "Filetypes"
@@ -4274,7 +4268,6 @@ msgid "Ty_pe:"
 msgstr "類型(_T):"
 
 #: ../src/quickstart.c:535
-#, fuzzy
 msgid "HRE_F:"
 msgstr "_HREF:"
 
@@ -4304,7 +4297,7 @@ msgstr "原始碼(_S):"
 
 #: ../src/quickstart.c:597
 msgid "<b>Script Area</b>"
-msgstr ""
+msgstr "<b>Script區</b>"
 
 #: ../src/quickstart.c:601
 msgid "Cre_ate empty script area"
@@ -4312,16 +4305,15 @@ msgstr "建立空專案"
 
 #: ../src/quickstart.c:642
 msgid "_DTD:"
-msgstr "使用 _DTD:"
+msgstr "使用 DTD(_D):"
 
 #: ../src/quickstart.c:669
 msgid "_Head:"
-msgstr "_Href:"
+msgstr "表頭(_H):"
 
 #: ../src/quickstart.c:686
-#, fuzzy
 msgid "Open in _new document."
-msgstr "在文件中(_D)"
+msgstr "在新文件中開啟(_n)"
 
 #: ../src/rcfile.c:493
 msgid "Galeon"
@@ -4513,7 +4505,6 @@ msgid "Replace o_nce"
 msgstr "取代一次(_N)"
 
 #: ../src/snr2.c:1468
-#, fuzzy
 msgid "_Bookmark results"
 msgstr "結果存入書籤"
 
@@ -4608,10 +4599,10 @@ msgstr "大小:"
 #~ msgstr "電子郵件位址(_E):"
 
 #~ msgid "UrlEncoded _subject:"
-#~ msgstr "UrlEncoded 主題(_S):"
+#~ msgstr "主旨(_S):"
 
 #~ msgid "UrlEncoded _body:"
-#~ msgstr "UrlEncoded_本體(_B):"
+#~ msgstr "內容(_B):"
 
 #~ msgid "_Href:"
 #~ msgstr "_Href:"
@@ -4719,7 +4710,7 @@ msgstr "大小:"
 #~ msgstr "/標記(T)/表格(T)/tearoff1"
 
 #~ msgid "/Tags/List/tearoff1"
-#~ msgstr "/標記(T)/列表(L)/tearoff1"
+#~ msgstr "/標記(T)/清單(L)/tearoff1"
 
 #~ msgid "/Tags/Form/tearoff1"
 #~ msgstr "/標記(T)/表單(R)/tearoff1"
