--- a/po/de.po
+++ b/po/de.po
@@ -3233,7 +3233,7 @@ msgstr "/Tags/_Kommentar"
 
 #: ../src/menu.c:595
 msgid "/Dial_ogs"
-msgstr "/Dialo_ge"
+msgstr "/Dial_oge"
 
 #: ../src/menu.c:597
 msgid "/Dialogs/_General"
@@ -3409,7 +3409,7 @@ msgstr "/Dialoge/Tag unter Cursor b_earbeiten..."
 
 #: ../src/menu.c:674
 msgid "/_Document"
-msgstr "/_Dokument"
+msgstr "/Do_kument"
 
 #: ../src/menu.c:676
 msgid "/Document/_Increase Tabsize"
