Fix two doubled mnemonics in German translation.
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/branches/bluefish_1_0@2494 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/po/de.po
+++ b/bluefish/po/de.po
@@ -3233,7 +3233,7 @@ msgstr "/Tags/_Kommentar"
 
 #: ../src/menu.c:595
 msgid "/Dial_ogs"
-msgstr "/Dialo_ge"
+msgstr "/Dial_oge"
 
 #: ../src/menu.c:597
 msgid "/Dialogs/_General"
@@ -3409,7 +3409,7 @@ msgstr "/Dialoge/Tag unter Cursor b_earbeiten..."
 
 #: ../src/menu.c:674
 msgid "/_Document"
-msgstr "/_Dokument"
+msgstr "/Do_kument"
 
 #: ../src/menu.c:676
 msgid "/Document/_Increase Tabsize"
